BUG-91325 Various code cleanup